All_Component_DX/force-app/main/default/objects/Product2/fields/Enable_Serialized_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Enable_Serialized_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag indicates if stock information for this product is tracked at the serial number level. If this flag is checked, serial number information will be captured in all ServiceMax inventory transactions.</description>
    <inlineHelpText>Flag indicates if stock information for this product is tracked at the serial number level. If this flag is checked, serial number information will be captured in all ServiceMax inventory transactions.</inlineHelpText>
    <label>Enable Serialized Tracking of Stock</label>
    <type>Checkbox</type>
</CustomField>