All_Component_DX/force-app/main/default/objects/Product2/fields/Inherit_Parent_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Inherit_Parent_Warranty__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if installed products of this product inherit the parent&#39;s warranty automatically. If not, this product should be linked to a warranty template.</description>
    <inlineHelpText>Indicates if installed products of this product inherit the parent&#39;s warranty automatically. If not, this product should be linked to a warranty template.</inlineHelpText>
    <label>Inherit Parent Warranty</label>
    <type>Checkbox</type>
</CustomField>