All_Component_DX/force-app/main/default/objects/Product2/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Picklist values here will be matched with similar field in Custom Coverage object to find applicable coverage</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wearable</fullName>
            </value>
            <value>
                <fullName>Consumable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>