All_Component_DX/force-app/main/default/objects/Product2/fields/SM_Enable_Batch_Lot_Tracking__c.field-meta.xml
<CustomField>
    <fullName>SM_Enable_Batch_Lot_Tracking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select this checkbox to indicate the stock information for this product is tracked at the batch/lot level. If this flag is checked, batch/lot number information will be captured in all ServiceMax inventory transactions.</description>
    <label>Enable Batch/Lot Tracking</label>
    <type>Checkbox</type>
</CustomField>