All_Component_DX/force-app/main/default/objects/Product2/fields/SM_External_ID__c.field-meta.xml
<CustomField>
    <fullName>SM_External_ID__c</fullName>
    <description>External System Unique ID</description>
    <externalId>true</externalId>
    <inlineHelpText>External System Unique ID</inlineHelpText>
    <label>External Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>