All_Component_DX/force-app/main/default/objects/Product2/fields/Tracking__c.field-meta.xml
<CustomField>
    <fullName>Tracking__c</fullName>
    <description>If and how this product is tracked when sold to customers. Serialized products are tracked by unique serial numbers. Lot/Batch tracked items are identified by the batch or lot numbers. Non-tracked items do not have a lot or serial number.</description>
    <inlineHelpText>If and how this product is tracked when sold to customers. Serialized products are tracked by unique serial numbers. Lot/Batch tracked items are identified by the batch or lot numbers. Non-tracked items do not have a lot or serial number.</inlineHelpText>
    <label>Tracking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Serialized</fullName>
            </value>
            <value>
                <fullName>Lot/Batch Tracked</fullName>
            </value>
            <value>
                <fullName>Non-Tracked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>